Upgrade GWT from 2.3.0 to 2.5.0-rc1 for Section 508 compliance