@@ -31,7 +31,7 @@
         <!--use -Dgwt.compiler.skip=true to skip GWT compiler -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.3.0</version>
+        <version>2.5.0-rc1</version>
         <configuration>
           <deploy>${project.build.directory}/gwt-symbols-deploy</deploy>
           <!-- The default profile needs to be fast, so we only build 1 permutation
@@ -49,7 +49,7 @@
           <!-- The GWT compiler must the correct JDT version -->
           <localWorkers>2</localWorkers>
           <!-- Using all workers can temporarily hang the mouse and isn't much faster -->
-          <extraJvmArgs>-Xmx512m</extraJvmArgs>
+          <extraJvmArgs>-XX:MaxPermSize=256m -Xmx1024m</extraJvmArgs>
         </configuration>
         <!--<dependencies> -->
         <!--&lt;!&ndash; Explicitly declare gwt dependencies to ensure the
